<resources>

    <string-array name="categories">
        <item>@string/fast_food</item>
        <item>@string/restaurants</item>
        <item>@string/fruits_and_vegetables</item>
        <item>@string/bakery</item>
        <item>@string/grocery</item>
        <item>@string/sweets_amp_ice_creams</item>
        <item>@string/fashion</item>
    </string-array>

    <string-array name="units">
        <item>Kilogram</item>
        <item>Litre</item>
        <item>Units</item>
        <item>Grams</item>
        <item>Meters</item>
    </string-array>

    <string name="app_name">Market</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="enter_mobile">Mobile</string>
    <string name="sign_up_link_text">New here? <font color="#3612FF">Sign Up</font></string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account_sign_in">Have Account? <font color="#3612FF">Log In</font></string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_name">Enter Name</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="gender">Gender: Male</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_email">Enter Email</string>
    <string name="near_me">Near Me</string>
    <string name="cart">Cart</string>
    <string name="sell">Sell</string>
    <string name="log_in">Log In</string>
    <string name="message">Message</string>
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="item_name">Strawberry Ice Cream</string>
    <string name="item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="price">500</string>
    <string name="bitmaps">Bitmaps</string>
    <string name="address">Pindwara, Sirohi</string>
    <string name="search_hint">What are you looking for</string>
    <string name="top_products">Top Products</string>
    <string name="top_sellers">Top Sellers</string>
    <string name="rating">4.5</string>
    <string name="open">Open</string>
    <string name="categories">Ice-Cream Deserts</string>
    <string name="password">Password</string>
    <string name="order_no">Order No - </string>
    <string name="quantity">Quantity - </string>
    <string name="total_amount">Total Amount - </string>
    <string name="date">26 Jan 2021</string>
    <string name="delivered">Delivered</string>
    <string name="add_photos">Add Photos</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="choose">Choose</string>
    <string name="chosen_photos">Chosen Photos</string>
    <string name="no_image">No Image Chosen</string>
    <string name="next">Next</string>
    <string name="your_bag">Your Bag</string>
    <string name="count">3 Items</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="delete">Delete</string>
    <string name="my_orders">My Orders</string>
    <string name="address_title">Address</string>
    <string name="timing">Timing</string>
    <string name="address_shop">Near Railway Station, Sojati Gate, Jodhpur</string>
    <string name="time">08:00 AM - 09:00 PM</string>
    <string name="reviews">Reviews (21)</string>
    <string name="open_now">Open Now</string>
    <string name="item_details">Size-7, Color-RED</string>
    <string name="or">Or</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="add_few_more">Just Few More</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>
    <string name="female">Female</string>
    <string name="otp_sent_to_91_7417316242">OTP sent to +91 7417316242</string>
    <string name="processing">Processing…</string>
    <string name="shop_name">Janta Sweet Home</string>
    <string name="change">Change</string>
    <string name="address_seller">Near Railway Station</string>
    <string name="order_received">Order Received</string>
    <string name="in_28_days">in 28 days</string>
    <string name="item_sold">Item Sold</string>
    <string name="view_more">View More</string>
    <string name="orders">Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="fulfilled_orders">Fulfilled Orders</string>
    <string name="my_products">My Products</string>
    <string name="new_nproduct">New Product</string>
    <string name="search">Search</string>
    <string name="rating_example">4.2 (990)</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="fast_food">Fast Food</string>
    <string name="restaurants">Restaurants</string>
    <string name="fruits_and_vegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="bakery">Bakery</string>
    <string name="grocery">Grocery</string>
    <string name="sweets_amp_ice_creams"><![CDATA[Sweets & Ice-creams]]></string>
    <string name="fashion">Fashion</string>
    <string name="profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_data">Personal Data</string>
    <string name="past_orders">Past Orders</string>
    <string name="offers">Offers</string>
    <string name="favourite">Favourite</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="log_out">Log Out</string>
    <string name="my_addresses">My Addresses</string>
    <string name="add_new">Add New</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="register">Register</string>
    <string name="pick_address">Pick Address</string>
    <string name="pick_shop_banner">Pick Shop Banner</string>
    <string name="recommended_image_ratio_1_1_9">Recommended Image Ratio 1:1.9</string>
    <string name="seller_registration">Seller Registration</string>
    <string name="shop_name_">Shop Name</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="gst_no">GST No</string>
    <string name="contact_no">Contact No</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="street_lane">Street/Lane</string>
    <string name="sell_message">Start your shop in few steps and Grow your sell</string>
    <string name="pin_code">Pin Code</string>
    <string name="hello">Hello</string>
    <string name="product_name">Product Name</string>
    <string name="product_details">Product Details</string>
    <string name="price_">Price (Original)</string>
    <string name="available_units">Available Units</string>
    <string name="minimum_selling_quantity">Minimum Selling Quantity</string>
    <string name="increment_size">Increment Size</string>
    <string name="unit_of_sell">Unit of sell</string>
    <string name="variants">Variants</string>
    <string name="color">Color</string>
    <string name="xl">XL</string>
    <string name="blue">Blue</string>
    <string name="add_color">Add Color</string>
    <string name="add_size">Add Size</string>
    <string name="ffffff">#ffffff</string>
    <string name="color_name">Color Name</string>
    <string name="size">Size</string>
    <string name="add_address">Add Address</string>
    <string name="discount">Discount %</string>
    <string name="currently_you_are_in">Currently you are in</string>
    <string name="pindwara">Pindwara</string>
    <string name="req">Would you like to see shops in this city</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">NA</string>
    <string name="no_more_seller">No more seller</string>
    <string name="order_total">Order Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total_payable">Total Payable</string>
    <string name="_679">679</string>
    <string name="_20">20</string>
    <string name="_699">699</string>
    <string name="pay_now">Pay Now</string>
</resources>