<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OTPAuthFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_otp"
        android:textColor="@color/purple_500"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_sent_to_91_7417316242"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/offers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/circle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key1"
                style="@style/KeyBoardButton"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key2"
                style="@style/KeyBoardButton"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key3"
                style="@style/KeyBoardButton"
                android:text="@string/_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key4"
                style="@style/KeyBoardButton"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key5"
                style="@style/KeyBoardButton"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key6"
                style="@style/KeyBoardButton"
                android:text="@string/_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key7"
                style="@style/KeyBoardButton"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key8"
                style="@style/KeyBoardButton"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key9"
                style="@style/KeyBoardButton"
                android:text="@string/_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key0"
                style="@style/KeyBoardButton"
                android:text="@string/_0" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/keyBackSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_backspace" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>