<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    tools:context=".SellerRegistrationFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            style="@style/TitleText"
            android:textSize="26sp"
            android:text="@string/seller_registration"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/personalData"
                    app:layout_constraintDimensionRatio="W, 1:1.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                   />

                <RelativeLayout
                    android:id="@+id/personalData"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="W, 1:1.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pickImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/pick_shop_banner"
                        android:textColor="@color/purple_500"
                        app:backgroundTint="@color/white"
                        app:cornerRadius="30dp"
                        app:elevation="0dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginVertical="10dp"
                        android:text="@string/recommended_image_ratio_1_1_9"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/shopName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/shop_name_"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/openingTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/opening_time"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="time" />

        <EditText
            android:id="@+id/closingTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/closing_time"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="time" />

        <EditText
            android:id="@+id/gstNo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/gst_no"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/contact_no"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="@style/TextInputField"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            style="@style/TitleText"
            android:textSize="20sp"
            android:text="@string/address_title"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/city"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/state"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/country"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pinCode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/pin_code"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/street_lane"
            style="@style/TextInputField"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/register"
            style="@style/CapsuleButton"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>