<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddProductFragment"
    android:paddingTop="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        style="@style/TitleText"
        android:textSize="26sp"
        android:text="@string/product_details"/>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/product_name"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/price_"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/unitOfSell"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/units"
        android:spinnerMode="dialog"
        android:prompt="@string/unit_of_sell"
        style="@style/TextInputField"
        />

    <EditText
        android:id="@+id/availableUnits"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/available_units"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/minimumSellingQuantity"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/minimum_selling_quantity"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/incrementSize"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/increment_size"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="top"
        android:minLines="7"
        android:hint="@string/product_details"
        style="@style/TextInputField"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="1000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/variants"
        android:textStyle="bold"
        android:textColor="@color/gray_200"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>